feat: add min-max value and placeholder in input

--- a/algorithm theory/index.html
+++ b/algorithm theory/index.html
@@ -22,7 +22,7 @@
       <div class="row mt-5 main-form">
         <div class="col">
             <form>
-              <input type="number" name="inputForm" id="form-input" class="form-control w-25">
+              <input type="number" name="inputForm" id="form-input" class="form-control w-25" placeholder="от 1 до 100 " min="1" max="100">
               <input type="submit" value="начало игры" for="input-form" class="btn btn-secondary mt-4" id="mainButton">
             </form>
         </div>
